[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/scripts/fase 2/Fase fios.gd" type="Script" id=1]
[ext_resource path="res://sprites/fase_dos_fios-Sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/fase 3/minigame/Sprite.gd" type="Script" id=3]
[ext_resource path="res://sprites/button play.png" type="Texture" id=4]
[ext_resource path="res://sprites/pausar .png" type="Texture" id=5]
[ext_resource path="res://sprites/button casinha .png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 360, 640 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "NoError",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "ThreeError",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "TwoError",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "oneError",
"speed": 2.5
} ]

[node name="Fase fios" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Node" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fundo"]
position = Vector2( 180, 320 )
frames = SubResource( 5 )
animation = "NoError"
playing = true

[node name="Pausar" type="Button" parent="Fundo"]
margin_left = 310.0
margin_top = 585.0
margin_right = 7278.0
margin_bottom = 7503.0
rect_scale = Vector2( 0.00596626, 0.00596626 )
text = "pausar"
icon = ExtResource( 5 )

[node name="erros" type="Node" parent="."]

[node name="terminais" type="Node" parent="."]

[node name="term1GB" type="ColorRect" parent="terminais"]
margin_left = 289.0
margin_top = 173.0
margin_right = 332.0
margin_bottom = 203.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="1GB" type="Button" parent="terminais/term1GB"]
margin_left = 3.0
margin_top = 6.0
margin_right = 42.0
margin_bottom = 26.0
text = "1GB"

[node name="term500" type="ColorRect" parent="terminais"]
margin_left = 288.0
margin_top = 239.0
margin_right = 334.0
margin_bottom = 269.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="500" type="Button" parent="terminais/term500"]
margin_left = 5.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 24.0
text = "500"

[node name="term 200" type="ColorRect" parent="terminais"]
margin_left = 290.0
margin_top = 301.0
margin_right = 331.0
margin_bottom = 331.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="300" type="Button" parent="terminais/term 200"]
margin_left = 4.0
margin_top = 6.0
margin_right = 40.0
margin_bottom = 26.0
text = "300"

[node name="term400" type="ColorRect" parent="terminais"]
margin_left = 289.0
margin_top = 42.0
margin_right = 335.0
margin_bottom = 72.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="400" type="Button" parent="terminais/term400"]
margin_left = 6.0
margin_top = 6.0
margin_right = 42.0
margin_bottom = 26.0
text = "400"

[node name="term100" type="ColorRect" parent="terminais"]
margin_left = 288.0
margin_top = 108.0
margin_right = 332.0
margin_bottom = 138.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="100" type="Button" parent="terminais/term100"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 24.0
text = "200"

[node name="Connecteds" type="Node" parent="."]

[node name="ConnectRed" type="ColorRect" parent="Connecteds"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 62.0
margin_top = 329.0
margin_right = 369.0
margin_bottom = 345.0
rect_rotation = -35.8314
color = Color( 1, 0, 0, 1 )

[node name="ConnectYellow" type="ColorRect" parent="Connecteds"]
visible = false
margin_left = 58.0
margin_top = 243.0
margin_right = 353.0
margin_bottom = 259.0
rect_rotation = -33.0245
color = Color( 0.945098, 0.392157, 0.121569, 1 )

[node name="ConnectBlue" type="ColorRect" parent="Connecteds"]
visible = false
margin_left = 65.0
margin_top = 162.0
margin_right = 338.0
margin_bottom = 178.0
rect_rotation = 24.9843
color = Color( 0, 0.0862745, 1, 1 )

[node name="ConnectWhite" type="ColorRect" parent="Connecteds"]
visible = false
margin_left = 66.0
margin_top = 82.0
margin_right = 350.0
margin_bottom = 98.0
rect_rotation = 28.0605
color = Color( 0.380392, 0.647059, 0.247059, 1 )

[node name="Fios" type="Node" parent="."]

[node name="F_red" type="ColorRect" parent="Fios"]
margin_left = -51.0
margin_top = 321.0
margin_right = -21.0
margin_bottom = 341.0
color = Color( 1, 0, 0, 1 )

[node name="Red" type="Button" parent="Fios/F_red"]
margin_left = 111.0
margin_top = -6.0
margin_right = 126.0
margin_bottom = 24.0

[node name="F_yellow" type="ColorRect" parent="Fios"]
margin_left = -53.0
margin_top = 242.0
margin_right = -23.0
margin_bottom = 262.0
color = Color( 0.945098, 0.392157, 0.121569, 1 )

[node name="Yellow" type="Button" parent="Fios/F_yellow"]
margin_left = 113.0
margin_top = -7.0
margin_right = 128.0
margin_bottom = 23.0

[node name="F_blue" type="ColorRect" parent="Fios"]
margin_left = -52.0
margin_top = 159.0
margin_right = -22.0
margin_bottom = 179.0
color = Color( 0, 0.0862745, 1, 1 )

[node name="Blue" type="Button" parent="Fios/F_blue"]
margin_left = 112.0
margin_top = -4.0
margin_right = 127.0
margin_bottom = 26.0

[node name="F_white" type="ColorRect" parent="Fios"]
margin_left = -47.0
margin_top = 77.0
margin_right = -17.0
margin_bottom = 97.0
color = Color( 0.380392, 0.647059, 0.247059, 1 )

[node name="White" type="Button" parent="Fios/F_white"]
margin_left = 107.0
margin_top = -2.0
margin_right = 122.0
margin_bottom = 28.0

[node name="Again" type="Node" parent="."]

[node name="AgainFundo" type="ColorRect" parent="Again"]
visible = false
margin_left = 21.0
margin_top = 156.0
margin_right = 339.0
margin_bottom = 267.0

[node name="AgainText" type="Label" parent="Again"]
visible = false
margin_left = 111.0
margin_top = 165.0
margin_right = 261.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Tentar novamente?"

[node name="AgainButton" type="Button" parent="Again"]
visible = false
margin_left = 108.0
margin_top = 201.0
margin_right = 240.0
margin_bottom = 237.0
text = "Sim"

[node name="FundoPause" type="Sprite" parent="."]
pause_mode = 2
visible = false
z_index = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="FundoPause"]
margin_left = -1.0
margin_top = -3.0
margin_right = 387.0
margin_bottom = 659.0
color = Color( 0.611765, 0.67451, 0.705882, 1 )

[node name="Button3" type="Button" parent="FundoPause"]
margin_left = 219.0
margin_top = 98.0
margin_right = 7143.0
margin_bottom = 7016.0
rect_scale = Vector2( 0.0126425, 0.0126425 )
icon = ExtResource( 6 )

[node name="Button2" type="Button" parent="FundoPause"]
margin_left = 78.0
margin_top = 100.0
margin_right = 7040.0
margin_bottom = 7018.0
rect_scale = Vector2( 0.0124347, 0.0124347 )
text = "voltar"
icon = ExtResource( 4 )

[node name="HSlider" type="HSlider" parent="FundoPause"]
margin_left = 77.0
margin_top = 241.0
margin_right = 317.0
margin_bottom = 270.0

[node name="Label" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 136.0
margin_top = 295.0
margin_right = 222.0
margin_bottom = 309.0

[node name="Label2" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 77.0
margin_top = 360.0
margin_right = 323.0
margin_bottom = 397.0

[connection signal="pressed" from="Fundo/Pausar" to="." method="_on_Pausar_pressed"]
[connection signal="pressed" from="terminais/term1GB/1GB" to="." method="_on_1GB_pressed"]
[connection signal="pressed" from="terminais/term500/500" to="." method="_on_500_pressed"]
[connection signal="pressed" from="terminais/term 200/300" to="." method="_on_300_pressed"]
[connection signal="pressed" from="terminais/term400/400" to="." method="_on_400_pressed"]
[connection signal="pressed" from="terminais/term100/100" to="." method="_on_100_pressed"]
[connection signal="pressed" from="Fios/F_red/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Fios/F_yellow/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="Fios/F_blue/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Fios/F_white/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="Again/AgainButton" to="." method="_on_AgainButton_pressed"]
[connection signal="pressed" from="FundoPause/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="FundoPause/Button2" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="FundoPause/HSlider" to="." method="_on_HSlider_value_changed"]
